@@ -128,4 +128,5 @@
   - [ ] UI: logo and favicon
   - [ ] email+code login by xiangnuan
   - [ ] user add group: add tg_link
+  - [x] fix: table layout 
 
